Add test setup & update scroll-tracker-component-manager

--- a/example/index.html
+++ b/example/index.html
@@ -10,12 +10,12 @@
 
 <div class="app" id="app" data-component="app-root">
 
-
   <nav class="site-header">
     <h1 class="site-header-title">Muban <span>Transition Component</span></h1>
   </nav>
 
   <div class="page-holder">
+
     <section
       data-component="dummy-foo"
       class="dummy-foo"
@@ -26,7 +26,6 @@
       <div class="abs-center js-text-content">
         <h1 class="heading-01">Scroll Transition</h1>
         <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-
         <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
         <div class="looping-animation js-loop-animation"></div>
       </div>
@@ -35,10 +34,8 @@
         data-component="dummy-foo-popup"
         class="dummy-foo-popup abs-center">
         <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-
         <button class="close-button button js-button-close">X</button>
       </div>
-
     </section>
 
     <section
@@ -53,7 +50,6 @@
 
         <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
         <div class="looping-animation js-loop-animation"></div>
-
       </div>
 
       <div
@@ -63,8 +59,100 @@
         <button class="close-button button js-button-close">X</button>
         <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
       </div>
-
     </section>
+
+    <section
+      data-component="dummy-foo"
+      class="dummy-foo"
+      data-scroll-component>
+      <span class="dummy-foo-bg abs-fill js-background"></span>
+
+      <div class="abs-center js-text-content">
+        <h1 class="heading-01">Scroll Transition</h1>
+        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+
+        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+        <div class="looping-animation js-loop-animation"></div>
+      </div>
+
+      <div
+        data-component="dummy-foo-popup"
+        class="dummy-foo-popup abs-center">
+
+        <button class="close-button button js-button-close">X</button>
+        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+      </div>
+    </section>
+
+    <section
+      data-component="dummy-foo"
+      class="dummy-foo"
+      data-scroll-component>
+      <span class="dummy-foo-bg abs-fill js-background"></span>
+
+      <div class="abs-center js-text-content">
+        <h1 class="heading-01">Scroll Transition</h1>
+        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+
+        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+        <div class="looping-animation js-loop-animation"></div>
+      </div>
+
+      <div
+        data-component="dummy-foo-popup"
+        class="dummy-foo-popup abs-center">
+
+        <button class="close-button button js-button-close">X</button>
+        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+      </div>
+    </section>
+
+    <section
+      data-component="dummy-foo"
+      class="dummy-foo"
+      data-scroll-component>
+      <span class="dummy-foo-bg abs-fill js-background"></span>
+
+      <div class="abs-center js-text-content">
+        <h1 class="heading-01">Scroll Transition</h1>
+        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+
+        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+        <div class="looping-animation js-loop-animation"></div>
+      </div>
+
+      <div
+        data-component="dummy-foo-popup"
+        class="dummy-foo-popup abs-center">
+
+        <button class="close-button button js-button-close">X</button>
+        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+      </div>
+    </section>
+
+    <section
+      data-component="dummy-foo"
+      class="dummy-foo"
+      data-scroll-component>
+      <span class="dummy-foo-bg abs-fill js-background"></span>
+
+      <div class="abs-center js-text-content">
+        <h1 class="heading-01">Scroll Transition</h1>
+        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+
+        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+        <div class="looping-animation js-loop-animation"></div>
+      </div>
+
+      <div
+        data-component="dummy-foo-popup"
+        class="dummy-foo-popup abs-center">
+
+        <button class="close-button button js-button-close">X</button>
+        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+      </div>
+    </section>
+
   </div>
 </div>
 
