--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,9 @@
       class="dummy-foo"
       data-scroll-component>
 
-      <span class="dummy-foo-bg abs-fill js-background"></span>
+      <span class="dummy-foo-bg abs-fill js-background">
+        <div class="progress js-progress"></div>
+      </span>
 
       <div class="abs-center js-text-content">
         <h1 class="heading-01">Scroll Transition</h1>
@@ -42,31 +44,9 @@
       data-component="dummy-foo"
       class="dummy-foo"
       data-scroll-component>
-      <span class="dummy-foo-bg abs-fill js-background"></span>
-
-      <div class="abs-center js-text-content">
-        <h1 class="heading-01">Scroll Transition</h1>
-        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
-
-        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
-        <div class="looping-animation js-loop-animation"></div>
-      </div>
-
-      <div
-        data-component="dummy-foo-popup"
-        class="dummy-foo-popup abs-center">
-
-        <button class="close-button button js-button-close">X</button>
-        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-      </div>
-    </section>
-
-    <section
-      data-component="dummy-foo"
-      class="dummy-foo"
-      data-scroll-component>
-      <span class="dummy-foo-bg abs-fill js-background"></span>
+      <span class="dummy-foo-bg abs-fill js-background">
+        <div class="progress js-progress"></div>
+      </span>
 
       <div class="abs-center js-text-content">
         <h1 class="heading-01">Scroll Transition</h1>
@@ -90,7 +70,9 @@
       data-component="dummy-foo"
       class="dummy-foo"
       data-scroll-component>
-      <span class="dummy-foo-bg abs-fill js-background"></span>
+      <span class="dummy-foo-bg abs-fill js-background">
+        <div class="progress js-progress"></div>
+      </span>
 
       <div class="abs-center js-text-content">
         <h1 class="heading-01">Scroll Transition</h1>
@@ -114,7 +96,9 @@
       data-component="dummy-foo"
       class="dummy-foo"
       data-scroll-component>
-      <span class="dummy-foo-bg abs-fill js-background"></span>
+      <span class="dummy-foo-bg abs-fill js-background">
+        <div class="progress js-progress"></div>
+      </span>
 
       <div class="abs-center js-text-content">
         <h1 class="heading-01">Scroll Transition</h1>
@@ -138,7 +122,35 @@
       data-component="dummy-foo"
       class="dummy-foo"
       data-scroll-component>
-      <span class="dummy-foo-bg abs-fill js-background"></span>
+      <span class="dummy-foo-bg abs-fill js-background">
+        <div class="progress js-progress"></div>
+      </span>
+
+      <div class="abs-center js-text-content">
+        <h1 class="heading-01">Scroll Transition</h1>
+        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
+
+        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+        <div class="looping-animation js-loop-animation"></div>
+      </div>
+
+      <div
+        data-component="dummy-foo-popup"
+        class="dummy-foo-popup abs-center">
+
+        <button class="close-button button js-button-close">X</button>
+        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+      </div>
+    </section>
+
+    <section
+      data-component="dummy-foo"
+      class="dummy-foo"
+      data-scroll-component>
+      <span class="dummy-foo-bg abs-fill js-background">
+        <div class="progress js-progress"></div>
+      </span>
 
       <div class="abs-center js-text-content">
         <h1 class="heading-01">Scroll Transition</h1>
