Fix positions when scrolling in container.

--- a/example/index.html
+++ b/example/index.html
@@ -14,162 +14,163 @@
     <h1 class="site-header-title">Muban <span>Transition Component</span></h1>
   </nav>
 
-  <div class="page-holder">
-    <section
-      data-component="dummy-foo"
-      class="dummy-foo"
-      data-scroll-component>
+  <div class="site-holder">
+    <div class="page-holder">
+      <section
+        data-component="dummy-foo"
+        class="dummy-foo"
+        data-scroll-component>
 
       <span class="dummy-foo-bg abs-fill js-background">
         <div class="progress js-progress"></div>
       </span>
 
-      <div class="abs-center js-text-content">
-        <h1 class="heading-01">Scroll Transition</h1>
-        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
-        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
-        <div class="looping-animation js-loop-animation"></div>
-      </div>
+        <div class="abs-center js-text-content">
+          <h1 class="heading-01">Scroll Transition</h1>
+          <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+          <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
+          <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+          <div class="looping-animation js-loop-animation"></div>
+        </div>
 
-      <div
-        data-component="dummy-foo-popup"
-        class="dummy-foo-popup abs-center">
-        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-        <button class="close-button button js-button-close">X</button>
-      </div>
-    </section>
+        <div
+          data-component="dummy-foo-popup"
+          class="dummy-foo-popup abs-center">
+          <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+          <button class="close-button button js-button-close">X</button>
+        </div>
+      </section>
 
-    <section
-      data-component="dummy-foo"
-      class="dummy-foo"
-      data-scroll-component>
+      <section
+        data-component="dummy-foo"
+        class="dummy-foo"
+        data-scroll-component>
       <span class="dummy-foo-bg abs-fill js-background">
         <div class="progress js-progress"></div>
       </span>
 
-      <div class="abs-center js-text-content">
-        <h1 class="heading-01">Scroll Transition</h1>
-        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
+        <div class="abs-center js-text-content">
+          <h1 class="heading-01">Scroll Transition</h1>
+          <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+          <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
 
-        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
-        <div class="looping-animation js-loop-animation"></div>
-      </div>
+          <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+          <div class="looping-animation js-loop-animation"></div>
+        </div>
 
-      <div
-        data-component="dummy-foo-popup"
-        class="dummy-foo-popup abs-center">
+        <div
+          data-component="dummy-foo-popup"
+          class="dummy-foo-popup abs-center">
 
-        <button class="close-button button js-button-close">X</button>
-        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-      </div>
-    </section>
+          <button class="close-button button js-button-close">X</button>
+          <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+        </div>
+      </section>
 
-    <section
-      data-component="dummy-foo"
-      class="dummy-foo"
-      data-scroll-component>
+      <section
+        data-component="dummy-foo"
+        class="dummy-foo"
+        data-scroll-component>
       <span class="dummy-foo-bg abs-fill js-background">
         <div class="progress js-progress"></div>
       </span>
 
-      <div class="abs-center js-text-content">
-        <h1 class="heading-01">Scroll Transition</h1>
-        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
+        <div class="abs-center js-text-content">
+          <h1 class="heading-01">Scroll Transition</h1>
+          <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+          <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
 
-        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
-        <div class="looping-animation js-loop-animation"></div>
-      </div>
+          <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+          <div class="looping-animation js-loop-animation"></div>
+        </div>
 
-      <div
-        data-component="dummy-foo-popup"
-        class="dummy-foo-popup abs-center">
+        <div
+          data-component="dummy-foo-popup"
+          class="dummy-foo-popup abs-center">
 
-        <button class="close-button button js-button-close">X</button>
-        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-      </div>
-    </section>
+          <button class="close-button button js-button-close">X</button>
+          <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+        </div>
+      </section>
 
-    <section
-      data-component="dummy-foo"
-      class="dummy-foo"
-      data-scroll-component>
+      <section
+        data-component="dummy-foo"
+        class="dummy-foo"
+        data-scroll-component>
       <span class="dummy-foo-bg abs-fill js-background">
         <div class="progress js-progress"></div>
       </span>
 
-      <div class="abs-center js-text-content">
-        <h1 class="heading-01">Scroll Transition</h1>
-        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
+        <div class="abs-center js-text-content">
+          <h1 class="heading-01">Scroll Transition</h1>
+          <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+          <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
 
-        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
-        <div class="looping-animation js-loop-animation"></div>
-      </div>
+          <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+          <div class="looping-animation js-loop-animation"></div>
+        </div>
 
-      <div
-        data-component="dummy-foo-popup"
-        class="dummy-foo-popup abs-center">
+        <div
+          data-component="dummy-foo-popup"
+          class="dummy-foo-popup abs-center">
 
-        <button class="close-button button js-button-close">X</button>
-        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-      </div>
-    </section>
+          <button class="close-button button js-button-close">X</button>
+          <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+        </div>
+      </section>
 
-    <section
-      data-component="dummy-foo"
-      class="dummy-foo"
-      data-scroll-component>
+      <section
+        data-component="dummy-foo"
+        class="dummy-foo"
+        data-scroll-component>
       <span class="dummy-foo-bg abs-fill js-background">
         <div class="progress js-progress"></div>
       </span>
 
-      <div class="abs-center js-text-content">
-        <h1 class="heading-01">Scroll Transition</h1>
-        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
+        <div class="abs-center js-text-content">
+          <h1 class="heading-01">Scroll Transition</h1>
+          <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+          <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
 
-        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
-        <div class="looping-animation js-loop-animation"></div>
-      </div>
+          <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+          <div class="looping-animation js-loop-animation"></div>
+        </div>
 
-      <div
-        data-component="dummy-foo-popup"
-        class="dummy-foo-popup abs-center">
+        <div
+          data-component="dummy-foo-popup"
+          class="dummy-foo-popup abs-center">
 
-        <button class="close-button button js-button-close">X</button>
-        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-      </div>
-    </section>
+          <button class="close-button button js-button-close">X</button>
+          <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+        </div>
+      </section>
 
-    <section
-      data-component="dummy-foo"
-      class="dummy-foo"
-      data-scroll-component>
+      <section
+        data-component="dummy-foo"
+        class="dummy-foo"
+        data-scroll-component>
       <span class="dummy-foo-bg abs-fill js-background">
         <div class="progress js-progress"></div>
       </span>
 
-      <div class="abs-center js-text-content">
-        <h1 class="heading-01">Scroll Transition</h1>
-        <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
-        <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
+        <div class="abs-center js-text-content">
+          <h1 class="heading-01">Scroll Transition</h1>
+          <button data-component="primary-button" class="primary-button button js-button-open">Open popup</button>
+          <button data-component="primary-button" class="primary-button button js-button-open-2">Open popup 2</button>
 
-        <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
-        <div class="looping-animation js-loop-animation"></div>
-      </div>
+          <h2 class="looping-animation-title heading-03 js-looping-title">Looping Animation</h2>
+          <div class="looping-animation js-loop-animation"></div>
+        </div>
 
-      <div
-        data-component="dummy-foo-popup"
-        class="dummy-foo-popup abs-center">
+        <div
+          data-component="dummy-foo-popup"
+          class="dummy-foo-popup abs-center">
 
-        <button class="close-button button js-button-close">X</button>
-        <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
-      </div>
-    </section>
-
+          <button class="close-button button js-button-close">X</button>
+          <h2 class="heading-02 abs-center js-title">Regular Transition</h2>
+        </div>
+      </section>
+    </div>
   </div>
 </div>
 
